--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: cineflow
 description: "CineFlow - Premium Streaming App for TV, Movies and Series"
 publish_to: 'none'
-version: 1.0.2+2
+version: 1.0.3+3
 
 environment:
   sdk: ^3.7.0-0
@@ -40,6 +40,7 @@ dependencies:
   
   # Wakelock
   wakelock_plus: ^1.1.4
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
