--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: cineflow
 description: "CineFlow - Premium Streaming App for TV, Movies and Series"
-publish_to: 'none'
-version: 1.0.3+3
+publish_to: "none"
+version: 1.0.4+4
 
 environment:
   sdk: ^3.7.0-0
@@ -10,37 +10,43 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  
+
   # Video Player
   video_player: ^2.9.2
   chewie: ^1.8.5
-  
+
   # State Management
   provider: ^6.1.2
-  
+
   # Storage
   shared_preferences: ^2.3.4
-  
+
   # UI Enhancements
   google_fonts: ^6.2.1
   shimmer: ^3.0.0
   cached_network_image: ^3.4.1
   flutter_staggered_animations: ^1.1.1
-  
+
   # Utilities
   http: ^1.2.2
   path_provider: ^2.1.5
-  
+
   # Firebase
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
-  
+
   # URL Launcher
   url_launcher: ^6.2.2
-  
+
   # Wakelock
   wakelock_plus: ^1.1.4
   package_info_plus: ^9.0.0
+
+  # Cast/Screen Mirroring
+  bonsoir: ^6.0.1
+
+  # Share
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +65,7 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/
     - canais.m3u
