feat: adicionar upload de M3U no painel admin

--- a/admin-panel/server/.gitignore
+++ b/admin-panel/server/.gitignore
@@ -13,7 +13,7 @@ serviceAccountKey.json
 # Uploads (APK files)
 uploads/
 
-# Data files (M3U - too large and sensitive)
+# Data files
 data/*.m3u
 data/*.m3u8
 
